# biorxiv-mcp

./: .gitignore  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  vitest.config.ts  vitest.integration.config.ts
assets/: repo-info.txt
fixtures/: sample.xml
src/: client.ts  jats.ts  server.ts
src/biorxiv_mcp/: config.py  convert.py  fetch.py  index.py  search.py  server.py
src/tools/: paper.ts
tests/: client.test.ts  integration.test.ts  integration_prompt.md  jats.test.ts  paper.test.ts  test_config.py  test_convert.py  test_fetch.py  test_index.py  test_search.py
