[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biorxiv-mcp"
version = "2.0.0"
description = "MCP server for bioRxiv preprint full-text retrieval (S3 .meca -> markdown) plus Europe PMC search"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "yogsoth-ai" }]
keywords = ["mcp", "biorxiv", "preprint", "full-text", "jats", "biology"]
dependencies = [
    "fastmcp>=2.0.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "pypandoc-binary>=1.13",
]

[project.scripts]
biorxiv-mcp = "biorxiv_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/biorxiv_mcp"]

[dependency-groups]
dev = ["pytest>=8.0.0"]
